--- a/about.css
+++ b/about.css
@@ -8,6 +8,10 @@
         font-family: 'Inter', sans-serif;
         ;
     }
+
+    header{
+        background-color: rgba(255, 199, 0, 0.4);
+    }
     
     .teach {
         display: inline-block;
@@ -47,9 +51,6 @@
     }
     
     .border-about {
-        border: 1px solid #000000;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        background-color: rgba(255, 199, 0, 0.4);
         display: flex;
         justify-content: space-between;
         padding-top: 30px;
@@ -63,10 +64,11 @@
     
     .project {
         display: inline-block;
-        width: 400px;
-        font-size: 18px;
+        max-width: 400px;
+        font-size: 22px;
         margin-left: 65px;
         margin-top: 17px;
+        margin-bottom: 30px;
     }
     
     .h2 {
@@ -80,8 +82,9 @@
     }
     
     h2 {
-        font-size: 35px;
+        font-size: 55px;
         color: #d18725;
+        margin: 20px 0 50px;
     }
     
     .par p {
@@ -91,7 +94,6 @@
     footer {
         margin-top: 30px;
         background: rgba(255, 199, 0, 0.4);
-        border: 1px solid #000000;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
     
@@ -133,6 +135,10 @@
         font-weight: normal;
         font-size: 24px;
         color: black;
+    }
+
+    main{
+        min-height: 70vh;
     }
     
     @media(max-width: 1024px) {
