make adaptive 320px

--- a/review.css
+++ b/review.css
@@ -372,6 +372,6 @@ footer {
     #last-comments .down a{
         font-size: 8px;
         margin-right: 2px;
-        font-weight: bold;
+        font-weight: bolder;
     }
 
