--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ h1{
     width: 250px;
     height: 75px;
     color: #FFFFFF;
+    text-decoration:none;
     font-weight: normal;
     font-size: 18px;
     text-align: center;
