--- a/review.css
+++ b/review.css
@@ -165,7 +165,7 @@ footer {
         justify-content: flex-end;
     }
     
-    #down a {
+    #last-comments down a {
         font-style: normal;
         font-weight: normal;
         font-size: 24px;
