--- a/style.css
+++ b/style.css
@@ -397,7 +397,7 @@ img{
 
 @media (max-width:425px){
     #teachers .teacher{
-        width:98%;
+        width:47%;
     }
 
     .taught{
@@ -455,7 +455,10 @@ font-size: 30px;
 
 @media (max-width:375px){
     #teachers .teacher{
-        width:45%;
+        width:48%;
+    }
+    .star{
+        width: 150px;
     }
 
     h1{
@@ -491,6 +494,9 @@ font-size: 30px;
     #down a{
         font-size: 8px;
         margin-right: 4px;
+    }
+    .star{
+        width: 130px;
     }
     #teacher .found{
         width: 130px;
