--- a/review.css
+++ b/review.css
@@ -367,5 +367,11 @@ footer {
         font-weight: bolder;
         margin-left:0;
     }
+    #support .tech {
+        font-size: 15px;
+        padding: 10px 15px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
 }
 
