--- a/review.css
+++ b/review.css
@@ -368,6 +368,8 @@ footer {
         margin-left:0;
     }
     #support .tech {
+        width:110px;
+        height: 40px;
         font-size: 15px;
         padding: 10px 15px;
         margin-top: 20px;
