--- a/teachers.css
+++ b/teachers.css
@@ -3,6 +3,10 @@
     margin: 0;
     box-sizing: border-box;
 }
+body {
+    font-family: 'Inter', sans-serif;
+    ;
+}
 
 header{
     padding-top: 55px;
@@ -83,6 +87,10 @@ header .teach{
     justify-content: space-between;
     background: #ffff;
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.15);
+}
+#cheater {
+    display: flex;
+    justify-content: flex-end;
 }
 
 #teachers img{
@@ -191,21 +199,16 @@ footer{
     font-size: 25px;
     text-decoration: none;
 }
-#help {
-    text-align: right;
-}
-#help .tech{
+.tech {
     background: #454545;
-    width: 310px;
-    height: 50px;
+    display: inline-block;
     text-decoration: none;
     color: #FFFFFF;
     font-weight: 300;
     font-size: 18px;
     padding: 14px 86px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    display: inline-block;
+    margin-top: 54px;
+    margin-bottom: 113px;
 }
 
 @media(max-width:1240px){
@@ -357,6 +360,17 @@ footer{
         font-size: 13px;
     }
 }
+@media(max-width: 768px) {
+    .teach {
+        font-size: 18px;
+    }
+    nav a {
+        font-size: 18px;
+    }
+    #down a {
+        font-size: 18px;
+    }
+}
 
 @media(max-width: 550px){
     #teachers .teacher{
@@ -472,7 +486,12 @@ footer{
     #link_2 .go{
         font-size: 13px;
     }
-  }
+    #help .tech{
+            font-size: 10px;
+            padding-left: 40px;
+            padding-right: 60px;
+        }
+}
 
 @media(max-width:320px){
     ::placeholder{
@@ -493,4 +512,42 @@ footer{
         margin-right: 1px;
         font-weight: bolder;
     }
+    #help .tech {
+            padding-left: 20px;
+            padding-right: 50px;
+        }
  }
+ @media(max-width: 425px) {
+    .teach {
+        font-size: 12px;
+    }
+    nav a {
+        font-size: 12px;
+        margin-right: 10px;
+    }
+    #down a {
+        font-size: 12px;
+    }
+    .tech {
+        width: 200px;
+        font-size: 10px;
+        padding-left: 40px;
+        padding-right: 60px;
+    }
+}
+@media(max-width: 320px) {
+    #down a {
+        font-size: 10px;
+        margin-right: 10px;
+    }
+    nav a {
+        font-size: 10px;
+    }
+    .teach {
+        font-size: 10px;
+    }
+    .tech {
+        padding-left: 20px;
+        padding-right: 50px;
+    }
+}
