--- a/review.css
+++ b/review.css
@@ -7,14 +7,7 @@
 body{
     font-family: 'Inter', sans-serif;
 }
-.teach {
-    display: inline-block;
-    color: #000000;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    text-decoration: none;
-}
+
 
 .container{
     max-width: 1300px;
@@ -39,13 +32,7 @@ body{
    display: inline-block;
 }
 
-nav a {
-    color: #FFC700;
-    text-decoration: none;
-    margin-right: 45px;
-    font-weight: normal;
-    font-size: 24px;
-}
+
 
 #reviews .review{
     display: flex;
@@ -121,47 +108,75 @@ nav a {
 
 
 
-footer {
-        margin-top: 30px;
-        background: rgba(255, 199, 0, 0.4);
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    }
-    
-    .firma {
-        padding-top: 62px;
-    }
-    
-    .firma {
-        display: flex;
-        justify-content: space-between;
-    }
+nav {
+    display: inline-block;
+}
 
-    #support{
-        text-align: right;
-    }
-    
-    #support .tech {
-        background: #454545;
-        display: inline-block;
-        text-decoration: none;
-        color: #FFFFFF;
-        font-weight: 300;
-        font-size: 18px;
-        padding: 14px 86px;
-        margin-top: 54px;
-        margin-bottom: 113px;
-    }
-    
-    #cheater {
-        display: flex;
-        justify-content: flex-end;
-    }
-    
-    #last-comments .down a {
-        font-style: normal;
-        font-weight: normal;
-        font-size: 24px;
-        color: black; }
+.teach {
+    display: inline-block;
+    color: #000000;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    margin-right: 30px;
+    text-decoration: none;
+}
+
+nav a {
+    color: #FFC700;
+    text-decoration: none;
+    margin-right: 45px;
+    font-weight: normal;
+    font-size: 24px;
+}
+
+footer {
+    margin-top: 30px;
+    background: rgba(255, 199, 0, 0.4);
+    border: 1px solid #000000;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.firma {
+    padding-top: 62px;
+}
+
+#down a {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    color: black;
+}
+
+.firma {
+    display: flex;
+    justify-content: space-between;
+}
+
+.tech {
+    background: #454545;
+    display: inline-block;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-weight: 300;
+    font-size: 18px;
+    padding: 14px 86px;
+    margin-top: 54px;
+    margin-bottom: 113px;
+}
+
+#cheater {
+    display: flex;
+    justify-content: flex-end;
+}
+
+#down a {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    color: black;
+}
+
 
 
 @media(max-width:1240px){
@@ -357,23 +372,27 @@ footer {
     }
 }
 @media(max-width: 320px){
-    #last-comments .teach{
+    #down a {
         font-size: 8px;
-        font-weight: bold;
+        margin-right: 10px;
     }
-    #last-comments .down a{
+    nav a {
         font-size: 8px;
-        margin-right: 2px;
-        font-weight: bolder;
-        margin-left:0;
     }
-    #support .tech {
-        width:110px;
-        height: 40px;
-        font-size: 15px;
-        padding: 10px 15px;
-        margin-top: 20px;
-        margin-bottom: 20px;
+    .teach {
+        font-size: 8px;
+    }
+    .tech {
+        padding-left: 20px;
+        padding-right: 50px;
     }
 }
+@media(max-width: 425px){
+    .tech {
+        font-size: 10px;
+        padding-left: 40px;
+        padding-right: 60px;
+    }
+}
+
 
