--- a/teachers.css
+++ b/teachers.css
@@ -551,4 +551,10 @@ footer{
         margin-right: 1px;
         font-weight: bolder;
     }
+    .tech {
+        width: 200px;
+        font-size: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
  }
